Add filteredOn(Function, String) in Iterable, Object[] and AtomicReferenceArray assertions. Fixes #1620